# ca-migrate

./: .gitignore  pyproject.toml
src/ca_migrate/: migrator.py  xml.py
src/ca_migrate/objects/: __init__.py  xml.py
