[project]
name = "ca-migrate"
version = "0.1.0"
description = "CA PPM Migrator"
readme = "README.md"
authors = [
    { name = "Mauro M.", email = "mauro.sm@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "mypy>=1.15.0",
    "types-lxml>=2025.3.30",
]
